--- a/src/com/dantehemerson/App.form
+++ b/src/com/dantehemerson/App.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dantehemerson.App">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="0" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="600" height="423"/>
+      <xy x="20" y="20" width="639" height="423"/>
     </constraints>
     <properties>
       <foreground color="-1513240"/>
@@ -16,7 +16,7 @@
     <children>
       <component id="aba30" class="javax.swing.JButton" binding="button1" default-binding="true">
         <constraints>
-          <grid row="4" column="8" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="9" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="147" height="32"/>
           </grid>
         </constraints>
@@ -27,7 +27,7 @@
       </component>
       <component id="5377a" class="javax.swing.JTextField" binding="ingreseseElTextoTextField" default-binding="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="348" height="24"/>
           </grid>
         </constraints>
@@ -56,7 +56,7 @@
       </component>
       <scrollpane id="6c4fe">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="9" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="1" row-span="1" col-span="10" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -73,7 +73,7 @@
       </scrollpane>
       <vspacer id="3267d">
         <constraints>
-          <grid row="5" column="5" row-span="1" col-span="5" vsize-policy="2" hsize-policy="1" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="6" row-span="1" col-span="5" vsize-policy="2" hsize-policy="1" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="dd938" class="javax.swing.JLabel">
@@ -86,7 +86,7 @@
       </component>
       <component id="39a4b" class="javax.swing.JTextField" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="10" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="348" height="24"/>
           </grid>
         </constraints>
@@ -108,7 +108,7 @@
       <grid id="fc689" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="7" column="1" row-span="2" col-span="9" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="2" col-span="10" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -160,6 +160,35 @@
           <text value="Tabla de Fallos :"/>
         </properties>
       </component>
+      <component id="d1d3" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="4" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Posiciónes : "/>
+        </properties>
+      </component>
+      <component id="b3519" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+        <constraints>
+          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="24"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="f5b77" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="9" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Tiempo :"/>
+        </properties>
+      </component>
+      <hspacer id="44f7">
+        <constraints>
+          <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
