Añadi un cambio , no recuerdo cuál. es raro...

--- a/src/com/dantehemerson/App.form
+++ b/src/com/dantehemerson/App.form
@@ -98,6 +98,8 @@
         </constraints>
         <properties>
           <editable value="true"/>
+          <focusCycleRoot value="false"/>
+          <focusTraversalPolicyProvider value="false"/>
           <inheritsPopupMenu value="false"/>
           <text value=""/>
           <toolTipText value="Texto (T)"/>
